--- a/data_preprocess.ipynb
+++ b/data_preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "0f3a8277",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "ea377cdd",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "78e1bb47",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
     "        else:\n",
     "            info.update({\n",
     "                \"n_unique\": s.nunique(),\n",
-    "                \"categories\": s.dropna().unique()[:10],  # 防止太长\n",
+    "                \"categories\": s.dropna().unique()[:10],\n",
     "            })\n",
     "\n",
     "        summary.append(info)\n",
@@ -291,12 +291,13 @@
     "\n",
     "**Outlier handling notes:**\n",
     "\n",
+    "- Remove records with negative `PRSM` values. \n",
     "- `TotalAmtOwed` and `Volume` have right-tailed outliers, but log-transformation will mitigate their leverage effect."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "e69536b0",
    "metadata": {},
    "outputs": [
@@ -469,7 +470,7 @@
     "# Box plots to visualize potential outliers in key numeric variables\n",
     "fig, axes = plt.subplots(1, 3, figsize=(12, 4))\n",
     "for i, var in enumerate(['FICO', 'TotalAmtOwed', 'Volume']):\n",
-    "    axes[i].boxplot(data_df[var].dropna(), vert=True)\n",
+    "    axes[i].boxplot(data_df[var], vert=True)\n",
     "    axes[i].set_title(var)\n",
     "plt.suptitle('Outlier Check via Box Plots', fontsize=13)\n",
     "plt.tight_layout()\n",
@@ -496,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "80a9aeeb",
    "metadata": {},
    "outputs": [
@@ -604,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "f1c965e0",
    "metadata": {},
    "outputs": [
@@ -812,7 +813,7 @@
     "    'Months'\n",
     "]\n",
     "\n",
-    "X_vif = data_df[numeric_predictors].dropna()\n",
+    "X_vif = data_df[numeric_predictors]\n",
     "X_vif = X_vif.assign(const=1)  # VIF requires intercept\n",
     "\n",
     "vif_df = pd.DataFrame({\n",
@@ -852,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "730fcbac",
    "metadata": {},
    "outputs": [
@@ -985,7 +986,7 @@
     "# Compute skewness\n",
     "skew_df = pd.DataFrame({\n",
     "    'Variable': vars_to_check,\n",
-    "    'Skewness': [skew(data_df[v].dropna()) for v in vars_to_check],\n",
+    "    'Skewness': [skew(data_df[v]) for v in vars_to_check],\n",
     "    'Min': [data_df[v].min() for v in vars_to_check],\n",
     "    'Max': [data_df[v].max() for v in vars_to_check],\n",
     "    'Median': [data_df[v].median() for v in vars_to_check],\n",
@@ -998,7 +999,7 @@
     "\n",
     "fig, axes = plt.subplots(len(candidates_for_log), 2, figsize=(12, 4 * len(candidates_for_log)))\n",
     "for i, var in enumerate(candidates_for_log):\n",
-    "    vals = data_df[var].dropna()\n",
+    "    vals = data_df[var]\n",
     "    vals_pos = vals[vals > 0]\n",
     "\n",
     "    axes[i, 0].hist(vals, bins=40, color='#5A7D9A', edgecolor='white')\n",
@@ -1029,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "e56db62b",
    "metadata": {},
    "outputs": [
@@ -1065,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "a6674368",
    "metadata": {},
    "outputs": [
@@ -1085,7 +1086,7 @@
     "fig, axes = plt.subplots(1, 2, figsize=(12, 5))\n",
     "\n",
     "axes[0].hist(train_df['PRSM'], bins=50, color='#5A7D9A', edgecolor='white')\n",
-    "axes[0].set_title(f'PRSM Distribution (skew={skew(train_df[\"PRSM\"].dropna()):.2f})')\n",
+    "axes[0].set_title(f'PRSM Distribution (skew={skew(train_df[\"PRSM\"]):.2f})')\n",
     "axes[0].set_xlabel('PRSM')\n",
     "axes[0].set_ylabel('Frequency')\n",
     "axes[0].axvline(x=1.0, color='red', linestyle='--', alpha=0.7, label='Expected value = 1')\n",
@@ -1093,7 +1094,7 @@
     "\n",
     "\n",
     "axes[1].hist(np.log(train_df['PRSM']), bins=50, color='#5A7D9A', edgecolor='white')\n",
-    "axes[1].set_title(f'PRSM Distribution (skew={skew(np.log(train_df[\"PRSM\"].dropna())):.2f})')\n",
+    "axes[1].set_title(f'PRSM Distribution (skew={skew(np.log(train_df[\"PRSM\"])):.2f})')\n",
     "axes[1].set_xlabel('PRSM')\n",
     "axes[1].set_ylabel('Frequency')\n",
     "axes[1].axvline(x=0.0, color='red', linestyle='--', alpha=0.7, label='Expected value = 0')\n",
@@ -1125,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "11f2d73d",
    "metadata": {},
    "outputs": [
@@ -1207,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "b0cd6a8e",
    "metadata": {},
    "outputs": [
@@ -1266,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a0305e74",
    "metadata": {},
    "outputs": [
