--- a/data_preprocess.ipynb
+++ b/data_preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "id": "0f3a8277",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "id": "ea377cdd",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "id": "78e1bb47",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "id": "e69536b0",
    "metadata": {},
    "outputs": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "id": "80a9aeeb",
    "metadata": {},
    "outputs": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "id": "f1c965e0",
    "metadata": {},
    "outputs": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "id": "730fcbac",
    "metadata": {},
    "outputs": [
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "id": "e56db62b",
    "metadata": {},
    "outputs": [
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "id": "a6674368",
    "metadata": {},
    "outputs": [
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "id": "11f2d73d",
    "metadata": {},
    "outputs": [
@@ -1186,10 +1186,10 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# Solution: create dummy variables for CorpStructure and NAICS\n",
-    "train_df = pd.concat([train_df, pd.get_dummies(train_df['CorpStructure'], prefix='CorpStructure'), pd.get_dummies(train_df['NAICS_industry'], prefix='NAICS')], axis=1)\n",
-    "dev_df = pd.concat([dev_df, pd.get_dummies(dev_df['CorpStructure'], prefix='CorpStructure'), pd.get_dummies(dev_df['NAICS_industry'], prefix='NAICS')], axis=1)\n",
-    "test_df = pd.concat([test_df, pd.get_dummies(test_df['CorpStructure'], prefix='CorpStructure'), pd.get_dummies(test_df['NAICS_industry'], prefix='NAICS')], axis=1)\n"
+    "# Solution: create dummy variables for CorpStructure and NAICS_industry and NAICS\n",
+    "train_df = pd.concat([train_df, pd.get_dummies(train_df['CorpStructure'], prefix='CorpStructure'), pd.get_dummies(train_df['NAICS_industry'], prefix='NAICS_ind'), pd.get_dummies(train_df['NAICS'], prefix='NAICS_code')], axis=1)\n",
+    "dev_df = pd.concat([dev_df, pd.get_dummies(dev_df['CorpStructure'], prefix='CorpStructure'), pd.get_dummies(dev_df['NAICS_industry'], prefix='NAICS_ind'), pd.get_dummies(dev_df['NAICS'], prefix='NAICS_code')], axis=1)\n",
+    "test_df = pd.concat([test_df, pd.get_dummies(test_df['CorpStructure'], prefix='CorpStructure'), pd.get_dummies(test_df['NAICS_industry'], prefix='NAICS_ind'), pd.get_dummies(test_df['NAICS'], prefix='NAICS_code')], axis=1)\n"
    ]
   },
   {
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "id": "b0cd6a8e",
    "metadata": {},
    "outputs": [
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "a0305e74",
    "metadata": {},
    "outputs": [
@@ -1281,14 +1281,6 @@
     }
    ],
    "source": [
-    "# vars to drop\n",
-    "# vars_to_drop = ['Num_Delinquent', \n",
-    "#                 'FICO', 'NAICS', 'NAICS_2digit', 'NAICS_industry', 'CorpStructure', \n",
-    "#                 'Months', 'Volume', 'TotalAmtOwed']\n",
-    "# train_df.drop(columns=vars_to_drop, inplace=True)\n",
-    "# dev_df.drop(columns=vars_to_drop, inplace=True)\n",
-    "# test_df.drop(columns=vars_to_drop, inplace=True)\n",
-    "\n",
     "# Save for downstream modeling\n",
     "train_df.to_csv('./train_df.csv', index=False)\n",
     "dev_df.to_csv('./dev_df.csv', index=False)\n",
